--- a/Store/dashboard.html
+++ b/Store/dashboard.html
@@ -61,7 +61,14 @@
             </button>
         </nav>
 
-        <div class="p-4 border-t border-gray-100">
+        <div class="p-4 border-t border-gray-100 space-y-3">
+            <div class="flex items-center justify-between">
+                <span class="text-xs font-semibold text-slate-700 uppercase">Role</span>
+                <select id="roleToggle" onchange="switchRole(this.value)" class="bg-blue-100 text-blue-700 rounded-lg px-2 py-1 text-xs font-bold border border-blue-300">
+                    <option value="admin">Admin</option>
+                    <option value="staff">Staff</option>
+                </select>
+            </div>
             <button onclick="logout()" class="w-full flex items-center gap-3 p-3 rounded-xl text-red-500 hover:bg-red-50 transition-colors">
                 <i data-lucide="log-out" class="w-5 h-5"></i> Logout
             </button>
@@ -106,7 +113,9 @@
                     <button onclick="toggleAdminMenu()" class="flex items-center gap-3 pl-5 border-l">
                         <img src="https://ui-avatars.com/api/?name=Admin&background=0D8ABC&color=fff"
                             class="w-8 h-8 rounded-full shadow-sm">
-                        <span class="text-sm font-medium text-slate-700">Store Admin</span>
+                        <span class="text-sm font-medium text-slate-700">
+                            Store <span id="roleLabel">Admin</span>
+                        </span>
                         <i data-lucide="chevron-down" class="w-4 h-4 text-slate-400"></i>
                     </button>
 
@@ -189,7 +198,7 @@
             <section id="products-section" class="content-section space-y-6">
                 <div class="flex justify-between items-center">
                     <h3 class="text-xl font-bold">Product Catalog</h3>
-                    <button onclick="openModal()" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2.5 rounded-xl flex items-center gap-2 transition-all shadow-lg shadow-blue-100">
+            <button onclick="if(!adminOnlyAction()) return; openModal()" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2.5 rounded-xl flex items-center gap-2 transition-all shadow-lg shadow-blue-100">
                         <i data-lucide="plus" class="w-4 h-4"></i> Add New Product
                     </button>
                 </div>
@@ -438,31 +447,40 @@
                 </button>
             </div>
 
-            <form class="p-6 space-y-4">
+            <form id="settingsForm" class="p-6 space-y-4">
                 <div>
                     <label class="text-sm font-semibold">Store Name</label>
-                    <input type="text" value="Pa-Buy Bes!"
+                    <input id="storeName" type="text" value="Pa-Buy Bes!"
                         class="w-full mt-1 bg-slate-50 border rounded-xl px-4 py-3">
                 </div>
 
                 <div>
                     <label class="text-sm font-semibold">Profit Margin (%)</label>
-                    <input type="number" value="20"
+                    <input id="profitMargin" type="number" value="20"
                         class="w-full mt-1 bg-slate-50 border rounded-xl px-4 py-3">
                 </div>
 
                 <div>
                     <label class="text-sm font-semibold">Delivery Fee ($)</label>
-                    <input type="number" value="5"
+                    <input id="deliveryFee" type="number" value="5"
                         class="w-full mt-1 bg-slate-50 border rounded-xl px-4 py-3">
                 </div>
 
                 <div>
                     <label class="text-sm font-semibold">Store Status</label>
-                    <select class="w-full mt-1 bg-slate-50 border rounded-xl px-4 py-3">
+                    <select id="storeStatus" class="w-full mt-1 bg-slate-50 border rounded-xl px-4 py-3">
                         <option>Open</option>
                         <option>Closed</option>
                     </select>
+                </div>
+
+                <div class="pt-4 border-t">
+                    <h4 class="font-semibold mb-2">Security</h4>
+                    <ul class="text-sm text-slate-600 space-y-1">
+                        <li>✓ Role-based access control</li>
+                        <li>✓ Session timeout enabled (10 min)</li>
+                        <li>✓ Activity logging active</li>
+                    </ul>
                 </div>
 
                 <button type="submit"
@@ -474,6 +492,98 @@
     </div>
 
     <script>
+        // ========================================
+        // ROLE-BASED ACCESS CONTROL
+        // ========================================
+        let currentUserRole = localStorage.getItem("role") || "staff";
+        
+        function applyRolePermissions() {
+            if (currentUserRole === "staff") {
+                // Hide admin-only buttons
+                document.querySelectorAll('.admin-only').forEach(el => el.classList.add('hidden'));
+                // Disable delete product buttons
+                document.querySelectorAll('.delete-product').forEach(btn => {
+                    btn.disabled = true;
+                    btn.classList.add('opacity-40', 'cursor-not-allowed');
+                });
+                document.querySelector('#roleLabel').innerText = "Staff";
+            } else {
+                document.querySelector('#roleLabel').innerText = "Admin";
+            }
+        }
+
+        function adminOnlyAction() {
+            if (currentUserRole !== "admin") {
+                alert("Access denied. Admin only.");
+                return false;
+            }
+            return true;
+        }
+
+        // ========================================
+        // STORE SETTINGS & PROFIT MARGIN
+        // ========================================
+        let storeSettings = JSON.parse(localStorage.getItem("storeSettings")) || {
+            storeName: "Pa-Buy Bes!",
+            profitMargin: 20,
+            deliveryFee: 5,
+            status: "Open"
+        };
+
+        function applyProfit(basePrice) {
+            return basePrice + (basePrice * storeSettings.profitMargin / 100);
+        }
+
+        function loadSettings() {
+            document.getElementById('storeName').value = storeSettings.storeName;
+            document.getElementById('profitMargin').value = storeSettings.profitMargin;
+            document.getElementById('deliveryFee').value = storeSettings.deliveryFee;
+            document.getElementById('storeStatus').value = storeSettings.status;
+        }
+
+        function saveSettings(e) {
+            e.preventDefault();
+            if (!adminOnlyAction()) return;
+
+            storeSettings.storeName = document.getElementById('storeName').value;
+            storeSettings.profitMargin = parseFloat(document.getElementById('profitMargin').value);
+            storeSettings.deliveryFee = parseFloat(document.getElementById('deliveryFee').value);
+            storeSettings.status = document.getElementById('storeStatus').value;
+
+            localStorage.setItem("storeSettings", JSON.stringify(storeSettings));
+            logSecurity("Updated store settings");
+            alert("Store settings saved!");
+            closeSettingsModal();
+        }
+
+        // ========================================
+        // SECURITY FEATURES
+        // ========================================
+        let sessionTimer;
+        let securityLogs = JSON.parse(localStorage.getItem("securityLogs")) || [];
+
+        function startSessionTimer() {
+            clearTimeout(sessionTimer);
+            sessionTimer = setTimeout(() => {
+                alert("Session expired. Please login again.");
+                logout();
+            }, 10 * 60 * 1000); // 10 minutes
+        }
+
+        function logSecurity(action) {
+            securityLogs.unshift({
+                action,
+                time: new Date().toLocaleString()
+            });
+            localStorage.setItem("securityLogs", JSON.stringify(securityLogs));
+        }
+
+        document.addEventListener('mousemove', startSessionTimer);
+        document.addEventListener('keydown', startSessionTimer);
+        startSessionTimer();
+
+        logSecurity("Logged in as " + currentUserRole);
+
         // Initialize Icons
         lucide.createIcons();
 
@@ -582,13 +692,22 @@
             const btn = ev.target.closest('.delete-product');
             if (!btn) return;
             const row = btn.closest('tr');
-            if (row) row.remove();
+            if (row) {
+                row.remove();
+                logSecurity("Deleted product");
+            }
 
             // If no product rows remain, show placeholder message again
             if (!productListBody.querySelector('tr')) {
-                productListBody.innerHTML = `\n                            <tr>\n                                <td class="px-6 py-4 font-medium italic text-slate-400" colspan="6">No products added yet. Click "Add New Product" to start.</td>\n                            </tr>`;
+                productListBody.innerHTML = `
+                            <tr>
+                                <td class="px-6 py-4 font-medium italic text-slate-400" colspan="6">No products added yet. Click "Add New Product" to start.</td>
+                            </tr>`;
             }
         });
+
+        // Apply role permissions on page load
+        applyRolePermissions();
 
         // Logout handler
         function logout() {
@@ -638,16 +757,50 @@
             document.getElementById('notificationBox').classList.toggle('hidden');
         }
 
+        // Close notification when clicking outside
+        document.addEventListener('click', (e) => {
+            const notifBox = document.getElementById('notificationBox');
+            const notifButton = e.target.closest('[onclick*="toggleNotifications"]');
+            if (!notifBox.contains(e.target) && !notifButton) {
+                notifBox.classList.add('hidden');
+            }
+        });
+
         // ADMIN MENU DROPDOWN
         function toggleAdminMenu() {
             document.getElementById('adminMenu').classList.toggle('hidden');
         }
 
+        // Close admin menu when clicking outside
+        document.addEventListener('click', (e) => {
+            const adminMenu = document.getElementById('adminMenu');
+            const adminButton = e.target.closest('[onclick*="toggleAdminMenu"]');
+            if (!adminMenu.contains(e.target) && !adminButton) {
+                adminMenu.classList.add('hidden');
+            }
+        });
+
+        // ROLE SWITCHING
+        function switchRole(role) {
+            currentUserRole = role;
+            localStorage.setItem("role", role);
+            applyRolePermissions();
+            logSecurity(`Switched to ${role} role`);
+        }
+
         // STORE SETTINGS MODAL
+        const settingsForm = document.getElementById('settingsForm');
+        settingsForm.addEventListener('submit', saveSettings);
+
+        // Set role dropdown to current role
+        document.getElementById('roleToggle').value = currentUserRole;
+
         function openSettingsModal() {
+            loadSettings();
             document.getElementById('settingsModal').classList.remove('hidden');
             document.getElementById('settingsModal').classList.add('flex');
             document.getElementById('adminMenu').classList.add('hidden');
+            logSecurity("Opened store settings");
         }
 
         function closeSettingsModal() {
