Fix: Restore product catalog button UI

--- a/Store/dashboard.html
+++ b/Store/dashboard.html
@@ -199,6 +199,9 @@
                 <div class="flex justify-between items-center">
                     <h3 class="text-xl font-bold">Product Catalog</h3>
                     <button onclick="if(!adminOnlyAction()) return; openModal()" class="admin-only bg-blue-600 hover:bg-blue-700 text-white px-5 py-2.5 rounded-xl flex items-center gap-2 transition-all shadow-lg shadow-blue-100">
+                        <i data-lucide="plus" class="w-4 h-4"></i> Add New Product
+                    </button>
+                </div>
                 
                 <div class="bg-white rounded-2xl border border-gray-100 shadow-sm overflow-hidden">
                     <table class="w-full text-left">
