--- a/client/cart.html
+++ b/client/cart.html
@@ -1,8 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shopping Cart - Pa-Buy Bes!</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+        :root { font-family: 'Inter', sans-serif; }
+        ::-webkit-scrollbar { width: 5px; }
+        ::-webkit-scrollbar-track { background: #f1f1f1; }
+        ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+        .modal-bg { background: rgba(15, 23, 42, 0.6); backdrop-filter: blur(4px); }
+    </style>
+</head>
+<body class="bg-gray-50 text-slate-900 flex h-screen overflow-hidden">
+
+    <aside class="w-64 bg-white border-r border-gray-200 flex-shrink-0 flex flex-col z-20">
+        <div class="p-6">
+            <div class="flex items-center gap-3 text-blue-600">
+                <div class="bg-blue-600 text-white p-2 rounded-lg">
+                    <i data-lucide="shopping-bag" class="w-5 h-5"></i>
+                </div>
+                <span class="text-xl font-bold tracking-tight text-slate-800">Pa-Buy Bes!</span>
+            </div>
+        </div>
+
+        <nav class="flex-1 px-4 space-y-1">
+            <button onclick="window.location.href='clientDashboard.html'" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
+                <i data-lucide="home" class="w-5 h-5"></i> Dashboard
+            </button>
+            <button onclick="window.location.href='stores.html'" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
+                <i data-lucide="store" class="w-5 h-5"></i> Stores
+            </button>
+            <button class="nav-btn active w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-blue-600 bg-blue-50 font-semibold">
+                <i data-lucide="shopping-cart" class="w-5 h-5"></i> Cart
+            </button>
+            <button onclick="window.location.href='messages.html'" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
+                <i data-lucide="message-circle" class="w-5 h-5"></i> Messages
+            </button>
+            <button onclick="window.location.href='profile.html'" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
+                <i data-lucide="user" class="w-5 h-5"></i> Profile
+            </button>
+        </nav>
+
+        <div class="p-4 border-t border-gray-100">
+            <button onclick="logout()" class="w-full flex items-center gap-3 p-3 rounded-xl text-red-500 hover:bg-red-50 transition-colors">
+                <i data-lucide="log-out" class="w-5 h-5"></i> Logout
+            </button>
+        </div>
+    </aside>
+
+    <div class="flex-1 flex flex-col min-w-0 overflow-hidden">
+        <header class="h-16 bg-white border-b border-gray-200 flex items-center justify-between px-8">
+            <h2 class="text-lg font-semibold text-slate-800">Shopping Cart</h2>
+            <div class="flex items-center gap-5">
+                <div class="relative">
+                    <button onclick="toggleNotifications()">
+                        <i data-lucide="bell" class="w-5 h-5 text-slate-400"></i>
+                        <span class="absolute -top-1 -right-1 w-2 h-2 bg-red-500 rounded-full border-2 border-white"></span>
+                    </button>
+                    <div id="notificationBox" class="hidden absolute right-0 mt-4 w-80 bg-white rounded-2xl shadow-xl border z-50">
+                        <div class="p-4 border-b font-bold text-slate-800">Notifications</div>
+                        <div class="max-h-72 overflow-y-auto divide-y">
+                            <div class="p-4 hover:bg-slate-50">
+                                <p class="text-sm font-semibold">Item Added to Cart</p>
+                                <p class="text-xs text-slate-500">Burger Combo • 1 min ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <main class="flex-1 overflow-y-auto p-8">
+            <div class="max-w-4xl mx-auto">
+                <h3 class="text-xl font-bold mb-6">Your Items</h3>
+                
+                <div class="bg-white rounded-2xl border shadow-sm overflow-hidden">
+                    <table class="w-full text-left">
+                        <thead class="bg-slate-50 border-b">
+                            <tr>
+                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Product</th>
+                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Price</th>
+                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Quantity</th>
+                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Total</th>
+                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody class="divide-y">
+                            <tr class="hover:bg-slate-50">
+                                <td class="px-6 py-4 font-semibold">Burger Combo</td>
+                                <td class="px-6 py-4">$12.50</td>
+                                <td class="px-6 py-4">
+                                    <div class="flex items-center gap-2">
+                                        <button class="px-2 py-1 bg-slate-100 rounded">-</button>
+                                        <span>2</span>
+                                        <button class="px-2 py-1 bg-slate-100 rounded">+</button>
+                                    </div>
+                                </td>
+                                <td class="px-6 py-4 font-bold">$25.00</td>
+                                <td class="px-6 py-4">
+                                    <button class="text-red-600 hover:text-red-700 text-sm">Remove</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="mt-8 bg-white rounded-2xl border shadow-sm p-6">
+                    <div class="space-y-3 mb-6">
+                        <div class="flex justify-between">
+                            <span>Subtotal:</span>
+                            <span class="font-semibold">$25.00</span>
+                        </div>
+                        <div class="flex justify-between">
+                            <span>Delivery Fee:</span>
+                            <span class="font-semibold">$5.00</span>
+                        </div>
+                        <div class="border-t pt-3 flex justify-between text-lg">
+                            <span class="font-bold">Total:</span>
+                            <span class="font-bold text-blue-600">$30.00</span>
+                        </div>
+                    </div>
+                    <button onclick="window.location.href='checkout.html'" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-xl">
+                        Proceed to Checkout
+                    </button>
+                </div>
+            </div>
+        </main>
+    </div>
+
+    <script>
+        lucide.createIcons();
+        function toggleNotifications() {
+            document.getElementById('notificationBox').classList.toggle('hidden');
+        }
+        document.addEventListener('click', (e) => {
+            const notifBox = document.getElementById('notificationBox');
+            const notifButton = e.target.closest('[onclick*="toggleNotifications"]');
+            if (!notifBox.contains(e.target) && !notifButton) {
+                notifBox.classList.add('hidden');
+            }
+        });
+        function logout() {
+            window.location.href = '../index.html';
+        }
+    </script>
+</body>
+</html>
   <title>Your Cart - Pa-Buy, Bes</title>
   <link rel="stylesheet" href="clientDashboard.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
