--- a/client/delivery.html
+++ b/client/delivery.html
@@ -8,10 +8,6 @@
     <style>
         .sidebar-nav-item:hover { background-color: rgba(59, 130, 246, 0.1); }
         .sidebar-nav-item.active { background-color: rgb(59, 130, 246); color: white; }
-        .status-badge { @apply px-3 py-1 rounded-full text-sm font-semibold; }
-        .status-pending { @apply bg-yellow-100 text-yellow-800; }
-        .status-in-transit { @apply bg-blue-100 text-blue-800; }
-        .status-delivered { @apply bg-green-100 text-green-800; }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-900">
@@ -135,7 +131,7 @@
                                             <h3 class="font-semibold text-lg">Order #12345</h3>
                                             <p class="text-sm text-gray-600">From: Main Store</p>
                                         </div>
-                                        <span class="status-badge status-in-transit">In Transit</span>
+                                        <span class="px-3 py-1 rounded-full text-sm font-semibold bg-blue-100 text-blue-800">In Transit</span>
                                     </div>
                                     <div class="space-y-3">
                                         <div class="flex items-center gap-3">
@@ -171,7 +167,7 @@
                                             <h3 class="font-semibold text-lg">Order #12346</h3>
                                             <p class="text-sm text-gray-600">From: Downtown Store</p>
                                         </div>
-                                        <span class="status-badge status-pending">Pending</span>
+                                        <span class="px-3 py-1 rounded-full text-sm font-semibold bg-yellow-100 text-yellow-800">Pending</span>
                                     </div>
                                     <div class="space-y-3">
                                         <div class="flex items-center gap-3">
@@ -216,15 +212,15 @@
                             <div class="space-y-3">
                                 <div class="flex items-center justify-between text-sm pb-3 border-b border-gray-200">
                                     <span class="text-gray-600">Order #12340</span>
-                                    <span class="status-badge status-delivered">Delivered</span>
+                                    <span class="px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">Delivered</span>
                                 </div>
                                 <div class="flex items-center justify-between text-sm pb-3 border-b border-gray-200">
                                     <span class="text-gray-600">Order #12339</span>
-                                    <span class="status-badge status-delivered">Delivered</span>
+                                    <span class="px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">Delivered</span>
                                 </div>
                                 <div class="flex items-center justify-between text-sm">
                                     <span class="text-gray-600">Order #12338</span>
-                                    <span class="status-badge status-delivered">Delivered</span>
+                                    <span class="px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">Delivered</span>
                                 </div>
                             </div>
                         </div>
